fix truncate label ellipsis

--- a/src/components/CashItemCard.css
+++ b/src/components/CashItemCard.css
@@ -19,6 +19,7 @@
 
 .item-card__body {
     padding: 0;
+    display: flex;
 }
 
 .item-card__footer {
